--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
     "description": "REST Server",
     "version": "1.0.0",
     "author": {
-        "name": "",
-        "email": ""
+        "name": "Lukas Singer"
     },
     "contributors": [
+        {
+            "name": "Lukas Singer"
+        },
+        {
+            "name": "Luke Borowy"
+        }
     ],
-    "repository": {},
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/LukasSinger/webdev-rest.git"
+    },
     "dependencies": {
-        "express": "^4.18.2",
-        "sqlite3": "^5.1.6"
+        "better-sqlite3": "^12.4.1",
+        "express": "^4.18.2"
+    },
+    "scripts": {
+        "start": "node rest_server.mjs"
     }
 }
